--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
                 <li><button class="btn-primary">Hire Me</button></li>
             </ul>
         </nav>
+    
+        <div class="banner">
+            <div>
+                <h3 class="banner-greetings">Hi, I am</h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact Me</button>
+            </div>
+            <img src="/images/hardy.png" alt="">
+        </div>
     </header>
     
 </body>
